web/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: web.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vista-svc
            port:
              number: 8080
  ingressClassName: nginx
